  an encrypted file rather than an insecure properties file. The encrypted file 
  can be created with the AWSCredentials API or the Cockpit application.
- Synchronize will act as an anonymous client if empty values are provided
  as the AWS access and secret keys. When the S3 connection is anonymous, only 
  public buckets will be accessible.
  


TOOLKIT

  * REST Implementation

- Added support for proxy authentication settings in jets3t.properties:
  "proxy-user", "proxy-password", and "proxy-domain"
- The service's HTTP proxy settings can be updated an reapplied on-demand using
  a range of #initHttpProxy methods.
- The HttpConnectionManager and HttpClient objects used by the REST service can
  now be reinitialised on-demand using the #initHttpConnection method.
- The underlying HttpClient and HttpConnectionManager objects can be accessed 
  to provide greater control and flexibility after a service is created.
- The automatic time adjustment performed in response to RequestTimeTooSkewed
  errors will now work through proxies.

KUDOS TO:

David Kavanagh for sample code that helped improve HTTP proxy support and 
configurability.

-------------
Version 0.6.1
-------------

COCKPIT
- Added support for copying or moving objects within and between buckets.
- Added dialog to assist in moving/renaming multiple objects within a bucket.
- Added support for updating objects with new metadata values.
- Fixed issue where downloading items to a directory containing many files and 
  directories (eg 250K+) would cause Cockpit to fail with OutOfMemory errors.
- Added a Confirm Password field to the encryption settings, to help prevent 
  problems where a password is mistyped.
- Cockpit can now generate valid signed GET URLs for DevPay S3 accounts.
    

SYNCHRONIZE
- Synchonize now recognizes when you have specified a partial S3 path when 
  synchronizing DOWN. A partial path is one that does not exactly match a